<resources>
    <string name="app_name">Task</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="accounts">Accounts</string>
    <string name="empty_accounts">You have no accounts yet, please add some</string>
    <string name="empty_transactions">You have no transactions yet, please add some</string>
    <string name="empty_dashboard">Your dashboard is empty</string>
    <string name="transaction">Transaction</string>
    <string name="mandatory_field">%s*</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="title_empty">Title should not be empty</string>
    <string name="name_empty">Name should not be empty</string>
    <string name="error_occurred">Error occurred</string>
    <string name="account">Account</string>
    <string name="selected">Selected</string>
    <string name="dump">Dump</string>
    <string name="no_account">You have no accounts selected, please add new or choose existing</string>
    <string name="create">Create</string>
    <string name="zero_amount">Zero transactions not allowed</string>
    <plurals name="transactions_count">
        <item quantity="zero">No transactions</item>
        <item quantity="one">1 transaction</item>
        <item quantity="other">%d transactions</item>
    </plurals>
</resources>
